feat: using alchemy theme

--- a/_amsf.yml
+++ b/_amsf.yml
@@ -6,5 +6,5 @@
 version:        2.0.19
 
 # Current theme
-amsf_theme:     curtana
+amsf_theme:     alchemy
 amsf_theme_url: https://github.com/amsf/amsf-curtana
