feat: use uniformed image cdn domain, changed to cloudfront directly

--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ url:            https://gufeng.sh
 # grabs the first image of your post as post featured image.
 #
 # Default:      https://d349cztnlupsuf.cloudfront.net
-# file:           https://d349cztnlupsuf.cloudfront.net
+file:           https://djpt4ndzzmju.cloudfront.net
 
 # Download files URL
 #
