--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -19,4 +19,4 @@ dev:            true
 baseurl:        ""
 
 # CDN location for development
-file:           https://s3.amazonaws.com/sparanoid
+file:           https://djpt4ndzzmju.cloudfront.net
