--- a/_config.yml
+++ b/_config.yml
@@ -172,8 +172,8 @@ service_worker:
 # Google Analytics tracking code
 google_analytics:
   enabled:      true
-  id:           UA-153536803-1
-  url:          https://www.googletagmanager.com/gtag/js?id=UA-131388356-1
+  id:           G-6LH59QE96D
+  url:          https://www.googletagmanager.com/gtag/js?id=G-6LH59QE96D
 
 # Site Twitter account handle
 twitter:        tearfulDalvik
